samples/_failures_safe/1761639422_6af68d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfe1801b.c: In function ‘main’:
./samples/SAFE/__tmp_cfe1801b.c:171:9: error: expected declaration or statement at end of input
  171 |         print_matrix(result);
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_cfe1801b.c:171:9: error: expected declaration or statement at end of input
